# AI-Code-Review-Assistant

./: .gitignore  .replit  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md
artifacts/ai-code-review/: index.html  package.json  vite.config.ts
artifacts/ai-code-review/.replit-artifact/: artifact.toml
artifacts/ai-code-review/src/: App.tsx  index.css
artifacts/ai-code-review/src/components/: AiChatWidget.tsx  GitHubEmptyState.tsx
artifacts/ai-code-review/src/lib/: tokenStore.ts  utils.ts
artifacts/ai-code-review/src/pages/: GitHubCallback.tsx  analysis.tsx  analytics.tsx  dashboard.tsx  documentation.tsx  history.tsx  landing.tsx  login.tsx  not-found.tsx  profile.tsx  pull-requests.tsx  register.tsx  review.tsx  (+4 more)
artifacts/ai-service/: .env.example  main.py  requirements.txt
artifacts/ai-service/.replit-artifact/: artifact.edit.toml
artifacts/ai-service/tests/: conftest.py  test_agent_orchestrator.py  test_ai_client.py  test_cache.py  test_config.py  test_routes.py
artifacts/api-server/: .env.example  package.json  vitest.config.ts
artifacts/api-server/src/: app.ts
artifacts/mockup-sandbox/: package.json  vite.config.ts
attached_assets/: Pasted-Overall-Architecture-AI-Code-Review-Assistant--17823826_1782382612644.txt  Pasted-The-UI-foundation-is-complete-Now-act-as-a-Senior-Staff_1782383869133.txt  Pasted-The-UI-is-complete-Do-NOT-redesign-any-existing-page-Do_1782385022266.txt
lib/api-client-react/src/: custom-fetch.ts
lib/api-spec/: openapi.yaml
lib/db/: .env.example
lib/db/src/: seed.ts
(+43 files in other folders)
