[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=7.1.4",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]
